# hypha

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  EMBEDDED.md  EVAL_ANALYSIS.md  README.md  SECURITY.md  hypha_dashboard.html  hypha_eval_report.json  hypha_fast_eval.json  hypha_mesh_eval.json  hypha_rigorous_eval.json  hypha_sync_dashboard.html  hypha_sync_eval.json  justfile  run.sh
.cargo/: config.toml.example
.github/: settings.yml
.github/workflows/: chaos.yml  ci.yml
crates/hypha-core/: Cargo.toml
crates/hypha-core/src/: agent.rs  lib.rs  metabolism.rs  sensor.rs
crates/hypha-firefly/: Cargo.toml
crates/hypha-firefly/src/: lib.rs
crates/hypha-ota/: Cargo.toml
crates/hypha-ota/src/: flash_fmt.rs  lib.rs  protocol.rs  receiver.rs
docs/: FLEET_POWER.md  TOPOLOGY.md
docs/adr/: 0001-mechanisms-must-earn-bio-inspired-claims.md  0002-peer-scoring-is-a-local-heuristic.md  0003-conductivity-is-a-usage-heuristic.md  0004-firefly-is-telemetry-until-measured.md  0005-tasks-do-not-reference-state-versions.md  0006-coordinate-with-typed-facts-and-one-bidding-contract.md  0007-ble-is-direct-adjacency-telemetry.md  README.md  _template.md
docs/design/: esp32-c6-power-measurement.md  hypha-next-roadmap.md  hypha-refinement-roadmap.md
docs/examples/: healthchecks.env.tpl
docs/measurements/power/: README.md
examples/: README.md  basic_node.rs  emergent_auction_live.rs  fast_eval.rs  generate_dashboard.rs  mesh_eval.rs  mycelial_synchrony.rs  mycelium_eval.rs  netem_node.rs  rigorous_eval.rs  slime_mold_auction.rs
firmware/: MESH_OTA_DESIGN.md  README.md
firmware/host-tests/: Cargo.toml
firmware/host-tests/src/: boot_move.rs  desync.rs  lib.rs
firmware/hypha_esp/: Cargo.toml
firmware/hypha_esp/.cargo/: config.toml
firmware/hypha_esp/src/: main.rs
firmware/hypha_esp_c6/: Cargo.toml  build.rs  partitions_ota.csv
firmware/hypha_esp_c6/src/: lib.rs  mesh_ota.rs  ota_apply.rs
firmware/hypha_esp_c6_idf/: .gitignore  Cargo.toml  build.rs  partitions_ota.csv  rust-toolchain.toml  sdkconfig.defaults
firmware/hypha_esp_c6_idf/.cargo/: config.toml
firmware/hypha_esp_c6_idf/src/: ble.rs  firefly.rs  led.rs  main.rs  mqtt.rs  ota_security.rs  placement.rs
firmware/mesh_ota/: Cargo.toml
firmware/mesh_ota/src/: main.rs
firmware/mesh_ota/tests/: sign_verify.rs
hypha-compute/: Cargo.toml  README.md
hypha-compute/src/: lib.rs  wasm.rs
hypha-core/: Cargo.toml  README.md
hypha-core/src/: agent.rs  lib.rs  mesh.rs  metabolism.rs
scripts/: ci.sh  ci_podman.sh  esp_debug_monitor.sh  esp_list_ports.sh  esp_ports.sh  fleet_power_doctor.sh  healthchecks_ping.sh  hypha_ble_peers_snapshot.sh  hypha_health_snapshot.sh  hypha_locate.sh  mesh_doctor.sh  mesh_doctor_tailscale.awk  sign_http_ota.sh  test_fleet_power_doctor.sh  test_healthchecks_ping.sh  test_hypha_ble_peers_snapshot.sh  test_hypha_health_snapshot.sh  test_hypha_locate.sh  test_mesh_doctor_ota_health.sh  test_mesh_doctor_ssh_mqtt.sh  test_mesh_doctor_tailscale.sh  test_power_measurement_validator.sh  test_sign_http_ota.sh  validate_esp_bridge.sh  validate_esp_serial.sh  validate_power_measurement.py
scripts/chaos/: chaos_agent.py  netns_chaos.sh
src/: capabilities.rs  eval.rs  lib.rs  mesh.rs  mycelium.rs  sync.rs
src/compute/: mod.rs  wasm.rs
src/core/: mesh.rs  mod.rs
tests/: adversarial_inputs.rs  capability_matching.rs  crdt_convergence.rs  gossip_storm.rs  libp2p_line.rs  libp2p_smoke.rs  mesh_mechanics.rs  mesh_sim.rs  mycelium_world.rs  ota_sim.rs  persistence.rs  protocol_fuzz.rs  schema_compat.rs  topicmesh_invariants.rs  validate_esp_logic.rs  viral_sim.rs
