[workspace]
members = [
    ".",
    "hypha-compute",
    "hypha-core",
]
exclude = []

[package]
name = "hypha"
version = "0.1.0"
edition = "2021"
description = "Fungal branching P2P coordination layer with low-battery awareness"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/hypha"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.100"
hypha-core = { path = "hypha-core" }
cid = "0.11.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
fjall = { version = "3.0.1", features = ["lz4"] }
libp2p = { version = "0.56.0", features = ["gossipsub", "noise", "tcp", "yamux", "quic", "macros", "tokio", "relay", "dcutr", "identify"] }
rand = "0.9"
rand_core = "0.6.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_ipld_dagcbor = "0.6.4"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
ucan = "0.4.0"
url = "2.5.8"
yrs = "0.25.0"

[dev-dependencies]
proptest = "1.6.0"
tempfile = "3.24.0"
turmoil = "0.7.0"

# Assimilation: Patch Tekne dependencies to local paths
[patch.crates-io]
innr = { path = "../innr" }
logp = { path = "../logp" }
kuji = { path = "../kuji" }
hyp = { path = "../hyp" }
pare = { path = "../pare" }
cnk = { path = "../cnk" }
sbits = { path = "../sbits" }
ans = { path = "../ans" }
fynch = { path = "../fynch" }
rkhs = { path = "../rkhs" }
lapl = { path = "../lapl" }
rmt = { path = "../rmt" }
qig = { path = "../qig" }
wass = { path = "../wass" }
slabs = { path = "../slabs" }
walk = { path = "../walk" }
propago = { path = "../propago" }
tier = { path = "../tier" }
jin = { path = "../jin" }
subsume-core = { path = "../subsume/subsume-core" }

