[package]
name = "hypha-compute"
version = "0.1.0"
edition = "2021"
description = "Secure WASM-based compute runtime for Hypha"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
hypha-core = { path = "../hypha-core" }
thiserror = "2.0"
tracing = "0.1"
wasmtime = "16.0" # Stable, secure WASM runtime

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
wat = "1.0"
