[package]
name = "hypha-core"
# Layer: L2
version = "0.1.0"
edition = "2021"
description = "Core primitives for hypha: metabolism, tasks, and mesh logic"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
tracing = "0.1"
instant = "0.1" # for WASM compatibility if needed, but std::time::Instant is fine for now
