[workspace]

[package]
edition      = "2024"
name         = "hypha_esp_c6"
rust-version = "1.88"
version      = "0.1.0"

[build-dependencies]
serde_json = "1"

[features]
default = ["led"]
# Use real ADC (GPIO2) for energy_score; otherwise mock 0.85/0.55 toggle
adc = ["dep:nb"]
# Enable BLE transport (requires TrouBLE stack; currently a build stub)
ble = ["esp-radio/ble", "esp-radio/coex"]
# RGB LED on GPIO8 (WS2812/NeoPixel): hue + brightness from energy/peers, RX = flash
led = ["dep:esp-hal-smartled2", "dep:smart-leds"]
# Simple on-board LED on GPIO8 (on/off): blink on TX, flash on RX. Use when board has no WS2812.
led-gpio = []
# Mesh OTA: embed pubkey, verify manifest, (later) receive chunks and write to OTA partition.
mesh_ota = ["dep:hypha-ota", "dep:serde", "dep:serde_json", "dep:ed25519-dalek", "dep:sha2", "dep:base64", "dep:hex"]

[lib]
name = "hypha_esp_c6"
path = "src/lib.rs"

[[bin]]
name = "hypha_esp_c6"
path = "./src/bin/main.rs"

[dependencies]
hypha-firefly = { path = "../../crates/hypha-firefly" }
hypha-ota = { path = "../../crates/hypha-ota", optional = true }
esp-hal = { version = "~1.0", features = ["esp32c6", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
critical-section = "1.2.0"
embedded-io = "0.7.1"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32c6",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32c6"] }
nb = { version = "1.1", optional = true }
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32c6",
  "esp-now",
  "unstable",
  "wifi",
] }
esp-hal-smartled2 = { version = "0.28", optional = true, features = ["esp32c6"] }
smart-leds = { version = "0.4", optional = true, default-features = false }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
serde_json = { version = "1", optional = true, default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2.1", optional = true, default-features = false }
sha2 = { version = "0.10", optional = true, default-features = false }
base64 = { version = "0.21", optional = true, default-features = false, features = ["alloc"] }
hex = { version = "0.4", optional = true, default-features = false, features = ["alloc"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
