# Host tool: sign firmware image for mesh OTA. Produces .sig and manifest for embedding.
[workspace]
[package]
name = "mesh_ota_sign"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[[bin]]
name = "mesh_ota_sign"
path = "src/main.rs"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
getopts = "0.2"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
